src/style.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background-color: #a1a1aa;
}

#page-grid {
  display: grid;
  grid-template: minmax(100vh, 1fr) / max-content minmax(600px, 1fr);
}

input,
textarea {
  outline: none;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#project-sidebar {
  font-family: "Rubik", sans-serif;
  background-color: #d4d4d4;
  grid-row: 1 / 3;
  grid-auto-rows: max-content;
  display: grid;
  width: 320px;
  padding: 60px 30px;
  position: relative;
}

#project-titles, #add-project-container {
  z-index: 10;
}

#sidebar-bg{
  background-image: url(/src/imgs/rubik.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 80%;
  opacity: 35%;
  width: 100%;
  height: 100%;
  position: absolute;
  left:0;
  top:0;
  pointer-events: none;
  transition: opacity 0.5s;
}

footer {
  justify-content: center;
  display: flex;
  align-items: center;
  margin-bottom: 0px;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 10px;
}

footer p {
  font-size: 14px;
  margin-right: 8px;
}

.fa.fa-github {
  color: white;
  transition: transform 0.3s ease-in-out;
}

.fa.fa-github:hover {
  transform: rotate(360deg) scale(1.2);
  color: #10b981;
}

#project-top {
  padding: 5px;
  display: flex;
  flex-direction: column;
  border: whitesmoke 5px solid;
  border-radius: 10px;
}

#h-sidebar {
  line-height: 34px;
  font-size: 32px;
  color: #52525b;
}

.divider {
  height: 1px;
  margin-top: 20px;
  margin-bottom: 20px;
  background-color: white;
  z-index: 10;
}

main .divider {
  background-color: #cbd5e1;
}

.project {
  font-size: 18px;
  padding: 10px;
  border-radius: 3px;
  margin-bottom: 2px;
  cursor: pointer;
}

.project.active,
.project.active:hover {
  color: #082f49;
  font-weight: bold;
  background-color: #fff8ad;
}

.project:hover {
  background-color: whitesmoke;
}

#add-project:hover {
  background-color: whitesmoke;
}

#add-project-container {
  display: flex;
  justify-content: flex-start;
  cursor: pointer;
}

#add-project {
  display: flex;
  align-items: center;
  font-size: 18px;
  font-weight: bold;
  padding: 5px 15px 5px 5px;
  border-radius: 3px;
}

#add-project p {
  color: black;
  text-shadow: 1px 1px #ffffff;
}

.add-icon {
  font-size: 30px;
  font-weight: bold;
  margin: 0px 5px;
}

#add-project .add-icon {
  color: #10b981;
}

#add-task .add-icon {
  color: #ef4444;
}

#project-info-container {
  display: flex;
}

#project-edit-container {
  display: none;
  flex-direction: column;
}

#add-task-container {
  display: flex;
  justify-content: flex-start;
}

#window-container {
  font-family: "Rubik", sans-serif;
  display: none;
  position: fixed;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

#add-task-form {
  display: none;
  width: max(75%, 800px);
  align-items: center;
  margin-top: 12px;
  margin-bottom: 12px;
  justify-content: space-between;
  padding: 10px;
  border: 1px solid whitesmoke;
  border-radius: 2px;
  font-size: 20px;
  cursor: pointer;
}

main {
  padding: 50px 40px;
}

#main-name {
  display: flex;
  align-items: center;
  font-size: 45px;
  font-weight: bold;
  margin-bottom: 5px;
}

#main-desc {
  font-size: 25px;
  font-style: italic;
}

#title-edit {
  background-image: url(/src/imgs/edit.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
  border: 1px dotted #cbd5e1;
  width: 14px;
  height: 14px;
  margin-left: 8px;
}

.edit-project-details {
  width: max(75%, 800px);
  height: 40px;
  font-size: 22px;
  font-style: italic;
  color: rgba(245, 245, 245, 0.8);
  border: 2px solid rgb(255, 255, 255);
  border-radius: 2px;
  background-color: #8fadc2;
  margin: 2px;
}

.edit-project-details::placeholder,
.add-task-name::placeholder {
  font-style: italic;
}

#project-edit-btns,
#project-add-btns,
#add-task-btns {
  display: flex;
  margin: 2px;
}

#project-edit-btns p,
#add-task-btns p {
  padding: 8px;
  margin: 3px;
  cursor: pointer;
}

#project-add-btns p {
  padding: 10px;
  margin: 5px;
  cursor: pointer;
}

#project-edit-btns p:hover,
#project-add-btns p:hover,
#add-task-btns p:hover {
  transform: scale(1.05);
  outline: 1px solid whitesmoke;
}

#project-edit-submit,
.add-task-submit,
.form-task-submit {
  background-color: #7dd3fc;
}

#project-add-submit {
  background-color: #7dd3fc;
}

#project-edit-cancel,
.add-task-cancel,
.form-task-cancel {
  background-color: #f9a8d4;
}

#project-add-cancel {
  background-color: #f9a8d4;
}
.todo {
  width: max(75%, 800px);
  margin-top: 12px;
  margin-bottom: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
  border: 1px solid whitesmoke;
  border-radius: 2px;
  font-size: 20px;
  cursor: pointer;
}

.todo:hover {
  transform: scale(1.005);
  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
  transition: all 0.1s ease-out;
}

.task-date {
  font-size: 20px;
}

.left-todo,
.right-todo {
  display: flex;
  align-items: center;
}

.checkbox {
  margin-right: 8px;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  border: 1px solid rgb(255, 255, 255, 0.4);
  cursor: pointer;
}

.checked {
  background-color: #10b981;
  background-image: url(/src/imgs/todo-done.png);
  background-size: 18px;
  background-position: center;
  background-repeat: no-repeat;
}

#add-task {
  display: flex;
  align-items: center;
  cursor: pointer;
  font-size: 20px;
  padding: 5px 15px 5px 5px;
  border-radius: 3px;
}

#add-task:hover {
  background-color: #d4d4d8;
}

.add-task-name,
.form-task-name {
  border: 2px solid rgb(255, 255, 255);
  border-radius: 2px;
  height: 40px;
  width: 100%;
  font-size: 22px;
}

#add-task-btns {
  margin-left: 15px;
}

#add-task-btns p {
  font-size: 16px;
}

#left-add-task,
.left-todo-edit {
  width: 50%;
}

#right-add-task,
.right-todo-edit {
  display: flex;
}

.left-todo-edit,
.right-todo-edit {
  display: none;
}

#add-project-window {
  display: flex;
  flex-direction: column;
  background-color: #94a3b8;
  border: whitesmoke 5px solid;
  border-radius: 10px;
  width: 550px;
  padding: 20px;
}

#add-project-window label {
  font-size: 22px;
}

#project-name {
  height: 40px;
  font-size: 20px;
  margin-bottom: 10px;
}

#project-desc {
  font-size: 20px;
}

#project-name::placeholder,
#project-desc::placeholder {
  font-style: italic;
}

.task-edit-icon {
  width: 24px;
  height: 24px;
  margin-left: 20px;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url(/src/imgs/task-edit.png);
}

.task-edit-icon:hover,
.task-bin-icon:hover {
  outline: solid whitesmoke 1px;
}

.task-bin-icon {
  width: 24px;
  height: 24px;
  margin-left: 2px;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url(/src/imgs/task-bin.png);
}

